No major changes being committed just minor formatting (like punctuation, nothing big)

--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="Resume.html">Resume</a>
+  <a href="resume.html">Resume</a>
 </li>
 <li>
   <a href="mailto:ajt2206@cumc.columbia.edu">
@@ -264,6 +264,12 @@ $(document).ready(function () {
 <li>
   <a href="http://github.com/a-jt84/">
     <span class="fa fa-github fa-lg"></span>
+     
+  </a>
+</li>
+<li>
+  <a href="https://www.linkedin.com/in/andrew-turner123/">
+    <span class="fa fa-linkedin fa-lg"></span>
      
   </a>
 </li>
@@ -285,7 +291,8 @@ $(document).ready(function () {
 
 <div id="about-this-website" class="section level2">
 <h2>About this website</h2>
-<p>This website is rough.</p>
+<p>About page for Andy’s website. Website is in process of being built.
+Will be added to throughout Fall and Winter of 2023.</p>
 </div>
 
 
