--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ div.tocify {
 GitHub page. Andy’s publically available GitHub repositories are all
 related to P8105: Data Science, a class at Columbia Mailman School of
 Public Health where Andy is currently learning R. Andy’s GitHub is also
-linked</p>
+linked in the drop-down menu in the top-right menu in this webpage!</p>
 <ul>
 <li>Here’s a link to the <a href="about.html">about</a> page.</li>
 <li>Here’s a link to the <a href="resume.html">resume</a> page.</li>
