adding site_libs

--- a/about.html
+++ b/about.html
@@ -256,6 +256,9 @@ $(document).ready(function () {
   <a href="resume.html">Resume</a>
 </li>
 <li>
+  <a href="dashboards.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:ajt2206@cumc.columbia.edu">
     <span class="fa fa-envelope fa-lg"></span>
      
