--- a/index.html
+++ b/index.html
@@ -330,6 +330,9 @@ div.tocify {
   <a href="resume.html">Resume</a>
 </li>
 <li>
+  <a href="dashboards.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:ajt2206@cumc.columbia.edu">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -371,6 +374,8 @@ linked in the drop-down menu in the top-right menu in this webpage!</p>
 <ul>
 <li>Here’s a link to the <a href="about.html">about</a> page.</li>
 <li>Here’s a link to the <a href="resume.html">resume</a> page.</li>
+<li>Here’s a link to the <a
+href="dashboards.html">dashboard</a>page.</li>
 </ul>
 </div>
 <div id="bragging-about-summer" class="section level2">
