--- a/resume.html
+++ b/resume.html
@@ -254,6 +254,9 @@ $(document).ready(function () {
   <a href="resume.html">Resume</a>
 </li>
 <li>
+  <a href="dashboards.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:ajt2206@cumc.columbia.edu">
     <span class="fa fa-envelope fa-lg"></span>
      
